# MidasMinerClone

./: .gitignore  CMakeLists.txt
lib/Engine/: CMakeLists.txt
lib/Engine/lib/glm/glm/: CMakeLists.txt
lib/Engine/src/: Constants.hpp  Constants.hpp.in  Engine.cpp  Engine.hpp  EventDispatcher.cpp  EventDispatcher.hpp  Scene.hpp  Sprite.cpp  Sprite.hpp  TextureManager.cpp  TextureManager.hpp
lib/Engine/src/ecs/: Component.hpp  ComponentPointer.hpp  ECS.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EntitySystem.cpp  EntitySystem.hpp  GemsComponent.cpp  GemsComponent.hpp  GemsSystem.cpp  GemsSystem.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderSystem.cpp  RenderSystem.hpp  TextComponent.cpp  TextComponent.hpp  TextSystem.cpp  TextSystem.hpp  TransformComponent.cpp  TransformComponent.hpp  TransformSystem.cpp  TransformSystem.hpp
proj/android/app/: CMakeLists.txt  build.gradle
proj/android/app/src/main/: AndroidManifest.xml
proj/android/app/src/main/cpp/: JNI.cpp  native-lib.cpp
proj/android/app/src/main/java/: org
proj/android/app/src/main/java/com/example/edfil/conceptv2/: MainActivity.java
proj/android/app/src/main/jni/: JNI.cpp
proj/android/app/src/main/res/values/: strings.xml
proj/android/gradle/wrapper/: gradle-wrapper.properties
proj/desktop/: CMakeLists.txt  main.cpp
res/: Test.txt
src/: CMakeLists.txt  GameConstants.hpp  GameManager.cpp  GameManager.hpp  GameScene.cpp  GameScene.hpp  GemsComponent.cpp  GemsComponent.hpp  GemsSystem.cpp  GemsSystem.hpp  MainMenuScene.cpp  MainMenuScene.hpp  dummyFile.cpp
